# rknn-runtime

./: Cargo.toml  LICENSE  README.md
examples/coco_test/: README.md  main.rs
src/: context.rs  error.rs  ffi.rs  inference.rs  lib.rs  memory.rs  tensor.rs
